CHANGES IN VERSION 1.8.10
-------------------------
BUG FIX
    o Cleanup docs for Oncoplot. Issue: #207
    o Fix ComplexHeatmap update. Issue: #205 #210
    o plotmafSummary addStats bug fix Issue: #204
    o Rainfall plot data.table null fix. Issue: #201
    o Support non human BSgenome. Issue: #197
    o SampleID bug fix. Issue: #153

CHANGES IN VERSION 1.8.0
-------------------------
NEW FUNCTIONS
    o OncogenicPathways - Perform enrichment for known oncogenic pathways from TCGA studies.
    o PlotOncogenicPathways - Plots OncogenicPathways results
    o drugInteractions - Drug gene interactions from DGIB database.

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o trinucleotideMatrix functions now works with BSgenomes instead of time consuming fasta files
    o rainfallPlot now detects Kataegis based on a greedy algorithm