@@ -6,7 +6,8 @@
 \usage{
 PlotOncogenicPathways(maf, pathways = NULL, fullPathway = FALSE,
   removeNonMutated = TRUE, tsgCol = "red", ogCol = "royalblue",
-  fontSize = 0.6)
+  fontSize = 0.6, showTumorSampleBarcodes = FALSE,
+  SampleNamefontSize = 0.6)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
@@ -22,6 +23,10 @@ PlotOncogenicPathways(maf, pathways = NULL, fullPathway = FALSE,
 \item{ogCol}{Color for onco genes. Default royalblue}
 
 \item{fontSize}{Default 0.6}
+
+\item{showTumorSampleBarcodes}{logical to include sample names.}
+
+\item{SampleNamefontSize}{font size for sample names. Default 10}
 }
 \description{
 Plot oncogenic pathways
